Changelog for haXigniter

Current
=======
Changed
 - Controllers are now in the haxigniter.controllers package! Update your controllers as needed.

v0.55 (2009-09-07)
==================
Features
 - Support for SQLite v3 added to PHP in the haxigniter.php.db.Sqlite class. 
 - Added Input.htmlEscape() which translates &'"<> to html entities. Input.htmlUnescape() does the opposite.
 - Added Input.escapeData() for easy escaping of incoming data.
 - Added Input.getParams() to avoid switching between the Neko and PHP version.

Changed
 - Database class updated to better handle stack traces.
 - Database CRUD methods (insert, update, delete) now handles classes and anonymous types.
 - Url.redirect() now treats urls starting with '/' as absolute.
 - Default controller and action can now be specified in application/config/Config.hx.

Bug fixes
 - REST error on missing action wasn't displayed properly.

v0.54 (2009-09-02)
==================
Features
 - If "src/haxigniter/application/resources" directory exists, the contents 
   will we copied to output dir when building. Useful for css, js, images etc.
 - Added comment about resource handling in root .gitignore file.
 - Added Url.linkUrl() for easier link output in templates.

Changed
 - Integrity tests now shows Development mode status.
 - Database method queryRow() now returns null if no row was found instead of an empty object.

Bug fixes
 - Fixed a quoting problem in the build scripts.
 - Windows build script only included php files in the external folder.

v0.53 (2009-08-30)
==================
Features
 - Added lastInsertId() to haxigniter.libraries.Database.
 - Added doc/mod_rewrite.conf, a template for Apache mod_rewrite
 - config.indexPath is now autodetected for PHP.

Bug fixes
 - Fixed a security hole in Neko session handler.
 - tools/build.sh didn't handle ending slash.

v0.52 (2009-08-29)
==================
Features
 - Added method for debugging, 